--- a/TP1/hello.css
+++ b/TP1/hello.css
@@ -1,15 +1,23 @@
-  
-h1{
-    font-size: 25px;
-    color: orange;
+
+body{
+    background: url(../img/bg2.jpg);
 }
 
-h2{
-    font-size: 20px;
-    color: brown;
-}
-
+div{
+border:50px;
+border-radius: 5px;
+background: url(../img/b1.jpg);
+position: 80px;
+background-size: 100% auto;
+width: 65%;
+height: 100%;
+margin-left:auto;
+margin-right:auto
+}  
 p{
-    font-size: 16px;
-    color: blue;
+  font-size:40px;
+}  
+h4{
+ font-size: 15px;
+ padding-left: 26px;
 }
